# high_quality_image_captioner

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.production  HISTORY.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
deploy/: entrypoint.sh
deploy/ssl/: cert.pem  fullchain.pem  privkey.pem
deploy/static/: README.md
hi_q_img_capt/: app.py  src.py
hi_q_img_capt/api/ports/: __init__.py
hi_q_img_capt/cli/: main.py
hi_q_img_capt/helpers/: loaders.py
jupyter_notebooks/: send_image_to_caption.ipynb
requirements/: base.txt
src/: app.py  src.py
src/api/ports/: caption_images.py  capture_images.py
src/cli/: main.py
src/constants/: hiq_images.py  hiq_images_endpoint.py
src/helpers/: generators.py  loaders.py  technicals.py
src/models/: images.py
volumes/milvus/etcd/member/snap/: db
volumes/milvus/rdb_data/: IDENTITY  LOG
volumes/milvus/rdb_data_meta_kv/: IDENTITY  LOG
