[tool.poetry]
name = "src"
version = "0.1.0"
description = "The REST API wrapping the most performant image captioner currently in production, which is in charge of captioning the images that the Human Users upload to their User Profile."
authors = ["Vladimir Rotariu <rotariuvladimir@gmail.com>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.6"
fastapi = "^0.112.2"
click = "^8.1.3"
uvicorn = {extras = ["standard"], version = "^0.31.1"}
pyyaml = "^6.0"
torch = "^2.4.1"
transformers = "^4.45.2"
pillow = "^10.4.0"
python-multipart = "^0.0.12"
asyncpg = "^0.29.0"
psutil = "^6.0.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.5"
pytest = "^7.2.1"
black = {extras = ["jupyter"], version = "^24.10.0"}
numpy = "^2.1.2"
httpx = "^0.27.2"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"